--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,9 +1,50 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block page_title %}
     My Blog
 {% endblock %}
 
+{% block css_files %}
+    <link rel="stylesheet" href="{% static "blog/index.css" %}" />
+{% endblock %}
+
 {% block content %}
-    <h1>Welcome to my blog</h1>
+    <header id="main-navigation">
+        <h1><a href="">Paul's Blog</a></h1>
+        <nav>
+            <a href="">All Posts</a>
+        </nav>
+    </header>
+
+    <section id="welcome">
+        <header>
+            <img src="" alt="Paul - The Author of This Blog" />
+            <h2>PAUL'S BLOG</h2>
+        </header>
+        <p>Hi, I am Paul and I like things and stuff!</p>
+    </section>
+
+    <section id="latest-posts">
+        <h2>My Latest Thoughts</h2>
+        <ul>
+            <li>
+                <article class="post">
+                    <a href="">
+                        <img src="" alt="Mountain Hiking" />
+                        <div class="post__content">
+                            <h3>Mountain Hiking</h3>
+                            <p>There's nothing like the views when you go hiking... oh boy it was so fun yayyyy
+                        </div>
+                    </a>
+                </article>
+            </li>
+        </ul>
+    </section>
+
+    <section id="about">
+        <h2>What I Do</h2>
+        <p>I love programming and video games and whatnot!</p>
+        <p>My goal is to keep on growing and helping you and stuff</p>
+    </section>
 {% endblock %}
